--- a/covidMyths/front/src/App.css
+++ b/covidMyths/front/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.title{
+  color:#425CB3;
+  
+
+  font-family: 'Open Sans', sans-serif;
+
+  font-family: 'Lora', serif;
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.myth{
+  color: #FFA58C
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.subtitle{
+  color:#91AAFF
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.truth{
+  color: #B2FF5A
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.black{
+  color: #1C290D
 }
