Paginacion de comentarios en noticias

--- a/covidMyths/front/src/components/VerDetalleNoticia.css
+++ b/covidMyths/front/src/components/VerDetalleNoticia.css
@@ -84,4 +84,26 @@
       background-color: rgb(184, 255, 90);
   }
   
+
+  .usuario{
+      color: #425CB3;
+      margin-left: 10px;
+      margin-bottom: 10px;
+  }
   
+
+  .usuarioRespuesta{
+    color: #425CB3;
+    margin-left: 10%;
+    margin-bottom: 10px;
+  }
+
+  .respuesta{
+      margin-left: 10%;
+      font-weight: 600;
+  }
+
+  .pregunta{
+      margin-left: 5%;
+      font-weight: 600;
+  }
