--- a/front/src/components/styles/Comentarios.css
+++ b/front/src/components/styles/Comentarios.css
@@ -1,5 +1,29 @@
+.red {
+  color: #ff2638;
+  
+}
+
+.black {
+  color: #20290e;
+}
+
+.green {
+  color: #b8ff33;
+}
+
+.blue {
+  color: #09b3b3;
+}
+
+.skyBlue {
+  color: #6fe3e3;
+}
+
+
+
+
 .btn-comentarios{
-    font-family: "Lora", serif;
+  font-family: "Gotu", sans-serif;
   display: inline-block;
   font-weight: 400;
   text-align: center;
@@ -24,17 +48,22 @@
   font-size: 1.2rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+  background-color:#6fe3e3;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  color: #425cb3;
-  border-color: #425cb3;
+  color: black;
+  border-color:#09b3b3;
 }
 
+
+.btn-comentarios:hover{
+  color: white;
+}
 .modal-title {
     margin-bottom: 0;
     line-height: 1.5;
     font-family: "Lora", serif;
-    color: #425cb3;
+    color:#09b3b3;
     font-size: x-large;
 }
 
