--- a/front/src/components/styles/Pregunta.css
+++ b/front/src/components/styles/Pregunta.css
@@ -3,7 +3,7 @@
 
 
 .card-header-pu{
-  font-family: 'Lora', serif;
+  font-family: "Gotu", sans-serif;
   padding: .75rem 1.25rem;
   margin-bottom: 0;
   font-size: x-large;
