--- a/front/src/components/styles/Menu.css
+++ b/front/src/components/styles/Menu.css
@@ -41,7 +41,7 @@ div.content {
 }
 
 .card-header-ou{
-  font-family: 'Lora', serif;
+  font-family: 'Gotu', sans-serif;
   padding: .75rem 1.25rem;
   margin-bottom: 0;
   font-size: x-large;
