--- a/front/src/components/Home.css
+++ b/front/src/components/Home.css
@@ -1,18 +1,43 @@
 .title {
-  color: #425cb3;
+  color: black;
   font-family: "Lora", serif;
   text-align: center;
-  font-size: 300%;
+  font-size: 40pt;
+  padding-top: 0%;
+}
+
+.title2 {
+  color: black;
+  font-family: "Lora", serif;
+  text-align: center;
+  font-size: 20pt;
   padding-top: 0%;
 }
 
 .paragraph {
   font-family: "Open Sans", sans-serif;
   font-size: 120%;
-  padding-left: 12%;
-  padding-right: 12%;
+  padding-left: 7%;
+  padding-right: 7%;
   text-align: justify;
   color: #1c290d;
+}
+
+.paragraph2 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 120%;
+  padding-left: 5%;
+  padding-right: 5%;
+  color: #1c290d;
+}
+
+.font-w-600 {
+  font-weight: 600;
+}
+
+.img-quienes-somos {
+  width: 100%;
+  border-radius: 8px;
 }
 
 .img-fin {
@@ -21,7 +46,7 @@
   text-align: center;
   display: block;
   margin: auto;
-  max-width: 310%;  
+  max-width: 310%;
   height: auto;
 }
 
@@ -31,18 +56,18 @@
   text-align: center;
   display: block;
   margin: auto;
-  max-width: 300%;  
+  max-width: 300%;
   height: auto;
 }
 
-.titulo-fin{
-  color:#91AAFF;
-  font-family: 'Lora', serif;
+.titulo-fin {
+  color: #91aaff;
+  font-family: "Lora", serif;
   font-size: 150%;
   text-align: center;
 }
 
-.container-imagenes{
+.container-imagenes {
   padding-left: 0%;
   padding-right: 8%;
 }
@@ -52,7 +77,7 @@
   text-align: center;
   display: block;
   margin: auto;
-  max-width: 20%;  
+  max-width: 20%;
   height: auto;
 }
 
@@ -61,13 +86,19 @@
   width: 18rem;
 }
 
+
+.card-img-top{
+  height: 200px;
+}
+
+
 .cards {
   padding: 0.3rem;
   background-color: #fff;
   text-align: center;
   display: block;
   margin: auto;
-  max-width: 20%;  
+  max-width: 20%;
   height: auto;
 }
 
@@ -88,23 +119,95 @@
   text-align: center;
 }
 
-
 .list-group-item {
   position: relative;
   text-align: left;
   display: block;
-  padding: .75rem 1.25rem;
+  padding: 0.75rem 1.25rem;
   background-color: #fff;
-  border: 1px solid #425CB3; ;
-      border-top-width: 1px;
-      border-right-width: 1px;
-      border-left-width: 1px;
+  border: 1px solid #425cb3;
+  border-top-width: 1px;
+  border-right-width: 1px;
+  border-left-width: 1px;
 }
 
-.list-group-item:hover{
-  background-color: #91AAFF;
+.list-group-item:hover {
+  background-color: #91aaff;
 }
 .width {
   width: 40rem;
 }
 
+.mas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  height: 90vh; /* if you don't want it to take up the full screen, reduce this number */
+  overflow: hidden;
+  background-size: cover;
+  background: radial-gradient(
+      ellipse at center,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0) 26%,
+      rgba(0, 0, 0, 0.65) 100%
+    ),
+    url("../imgs/white-ceramic-mug-on-white-printer-paper-3944430.jpg")
+      no-repeat center center scroll;
+  background-size: 100%;
+  margin-bottom: 70px;
+}
+
+.par {
+  color: #808080;
+}
+
+.text-center{
+  text-align: center;
+  margin: auto;
+}
+
+  .margin-70{
+    margin-bottom: 70px;
+  }
+
+  .margin-bot{
+    margin-bottom: 40px;
+  }
+
+h1 {
+  font-style: normal;
+  font-weight: bold;
+  color: #eee;
+  font-size: 11vmin;
+  letter-spacing: 0.03em;
+  line-height: 1;
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
+  margin-bottom: 40px;
+}
+
+button {
+  background: #425cb3;
+  transition: background ease 0.25s;
+  border-radius: 15px;
+  display: inline-block;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  margin: 0;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.2rem;
+  cursor: pointer;
+  text-align: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+button:hover {
+  background: #4973fd;
+}
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
